# HCacheAndroid

./: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/cpp/: CacheJNI.cpp
src/main/cpp/include/: CacheJNI.hpp
src/main/kotlin/HCache/: HCache.kt
src/test/kotlin/HCache/: LibraryTest.kt
